--- a/src/app/pokemon/components/tabs/tabs.component.html
+++ b/src/app/pokemon/components/tabs/tabs.component.html
@@ -1,1 +1,19 @@
-<p>tabs works!</p>
+
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link"
+            (click)="currentTab = 'tab-pokemons'"
+            [ngClass]="{ 'active': currentTab === 'tab-pokemons'}"  
+            href="#">
+            Pokémos
+        </a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link"
+            (click)="currentTab = 'tab-favorites'"
+            [ngClass]="{ 'active': currentTab === 'tab-favorites'}"  
+            href="#">
+            Favoritos
+        </a>
+    </li>
+</ul>
